Fixed issue with sidebar link overlap
Closes #17566

--- a/app/assets/stylesheets/framework/gitlab-theme.scss
+++ b/app/assets/stylesheets/framework/gitlab-theme.scss
@@ -29,7 +29,7 @@
       }
     }
 
-    .collapse-nav a {
+    .toggle-nav-collapse {
       color: #fff;
       background: $color;
     }
